--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "REST API's con Express y Typescript",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "test":"jest --detectOpenHandles",
+    "pretest": "ts-node ./src/data --clear"
   },
   "author": "Alex Hernandez",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
