--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Alex Hernandez",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.14",
     "@types/supertest": "^6.0.3",
@@ -26,6 +27,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
